--- a/interface.css
+++ b/interface.css
@@ -7,11 +7,14 @@ header {
 	width: 100%;
 	text-align: center;
 	top: 0;
-	padding: 30px;
+	padding: 0px;
 	margin: 0px;
+	height: 40px;
 }
 
-
+topnav {
+	
+}
 
 
 body {
@@ -30,4 +33,9 @@ footer {
 	color: white;
 	width: 100%;
 	padding: 0px 20px 5px 0px;
+	color: #7eeda1;
+}
+
+footer a {
+	color: #7eeda1;
 }
